fix copyright text alignment on footer

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -14,6 +14,7 @@
 
         .footer__content__copyright {
             flex-grow: 1;
+            text-align: center !important;
         }
 
         .footer__content__socials {
